modules/gdscript/tests/scripts/analyzer/errors/local_variable_as_type.gd
func test():
	var Node = Custom
	var a: Node = Node2D.new()

class Custom extends RefCounted:
	pass
